--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,40 @@
 
 body {
-  font-family: 'Poppins', sans-serif;
-  margin: 0;
-  padding: 0;
-  background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
-  color: white;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: right;
+  background-image: url('./images/backgroundimage.jpg');
+  background-position: center;
+  background-size: cover;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+h2{
+  background: linear-gradient(#afe435,#49b4bd, #8ea21f);
+  background-clip: text;
+  color: transparent;
+  position: fixed; 
+  top: 20px; 
+  right: 70px; 
+  transform: translateX(0); 
+  z-index: 10; 
+  
+  
 }
 
 .main-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  width: 1100px;
   padding: 20px;
   min-height: 100vh;
   gap: 30px;
+  position: relative;
+  padding: 120px 20px 20px; 
+  margin-left: 20px;
+
 }
 
 
@@ -45,8 +65,20 @@ h2 {
   }
 }
 
-/* Responsive design for smaller screens */
 @media (max-width: 768px) {
+  body{
+    background-image: url('./images/phonebg.jpg');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    min-height: 100vh;
+  }
+  h2{
+    background: linear-gradient(#afe435,#49b4bd, #8ea21f);
+  background-clip: text;
+  color: transparent;
+  }
   .event-list {
     flex-direction: column;
     align-items: center;
